# FEtigueX

./: .gitignore  LICENSE  README.md  config.yaml  environment.yml  pyproject.toml
src/fetiguex/: __init__.py  geometry.py
