[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "fetiguex"
version = "0.1.0"
authors = [
  { name="chiraprabha" }
]
description = "Phase field fatigue crack growth solver using Gmsh, FEniCSx, and PyVista"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "matplotlib",
    "pyvista"
]

[project.optional-dependencies]
test = [
    "pytest",
]

[tool.setuptools.packages.find]
where = ["src"]
